<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="habit"
            type="com.example.habittracker.database.Habit" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border">


        <TextView
            android:id="@+id/habitName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{habit.name}"
            tools:text="@string/habit_name" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/DescriptionText"
            app:layout_constraintTop_toBottomOf="@+id/habitName"
            android:text="@{habit.description}"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/habitType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/Type"
            app:layout_constraintTop_toBottomOf="@+id/priority"
            android:text="@{habit.type.toString()}"
            tools:text="Habbit Type" />

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/priorityText"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:text="@{habit.priority}"
            tools:text="Priority" />

        <TextView
            android:id="@+id/times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@{habit.times}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/Type"
            app:layout_constraintTop_toBottomOf="@+id/Type"
            tools:text="@string/times" />

        <TextView
            android:id="@+id/periodicity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{habit.periodicity}"
            app:layout_constraintStart_toEndOf="@+id/PerText"
            app:layout_constraintTop_toBottomOf="@+id/habitType"
            tools:text="@string/periodicity" />

        <TextView
            android:id="@+id/DescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/description_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habitName" />

        <TextView
            android:id="@+id/priorityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/priority"
            app:layout_constraintStart_toStartOf="@+id/DescriptionText"
            app:layout_constraintTop_toBottomOf="@+id/DescriptionText" />

        <TextView
            android:id="@+id/Type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/type"
            app:layout_constraintStart_toStartOf="@+id/priorityText"
            app:layout_constraintTop_toBottomOf="@+id/priorityText" />

        <TextView
            android:id="@+id/PerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/times_per"
            app:layout_constraintStart_toEndOf="@+id/times"
            app:layout_constraintTop_toBottomOf="@+id/habitType" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>